<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

        <EditText
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_white_round_corner"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/login"
            android:padding="6dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:inputType="textCapSentences"
            android:layout_marginBottom="10dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_"
            android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/background_white_round_corner"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:padding="6dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:inputType="textCapSentences"
                android:layout_marginBottom="10dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="20dp"
                    android:buttonTint="@color/colorWhite"
                    android:text="@string/remember"/>

            </LinearLayout>

                <Button
                    android:id="@+id/ok_access"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_white_round_corner"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:text="@string/ok"
                    android:onClick="okAccess"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>